Fix layout overflow problem add new plant to separate page

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,7 +1,3 @@
-body {
-  overflow: hidden;
-}
-
 h1 {
   font-weight: 600;
   font-size: 1.25rem;
